--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
    </div>
    </nav>
    <section class="container my-5 text-center">
-   <img src="../archivos/imgs/28003-1710080339.jpg" class="rounded-circle" alt="Perfil" width="165" height="175">
+   <img src="archivos/imgs/28003-1710080339.jpg" class="rounded-circle" alt="Perfil" width="165" height="175">
    <h1 class="my-3">José Antonio</h1>
    <p class="lead">Desarrollador Web</p>
    <p>Me apasiona crear soluciones digitales mediante el desarrollo web. Tengo experiencia en frontend y
   backend con tecnologías modernas.</p>
-   <a href="../archivos/Curriculum Jose Antonio Espino Daza.pdf" download="Curriculum-JoseAntonioEspinoDaza.pdf" class="btn btn-primary bg-dark text-white">Descargar Currículum</a>
+   <a href="archivos/Curriculum Jose Antonio Espino Daza.pdf" download="Curriculum-JoseAntonioEspinoDaza.pdf" class="btn btn-primary bg-dark text-white">Descargar Currículum</a>
    </section>
    <section class="container my-5">
    <h2 class="text-center mb-4">Habilidades</h2>
